[package]
name = "gridiron-maker"
version = "1.4.0"
authors = ["Gridiron"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = "1.1"
cw2 = "0.15"
cw20 = "0.15"
cw-storage-plus = "0.15"
gridiron = { path = "../../../packages/gridiron", version = "3.10" }
thiserror = { version = "1.0" }
cosmwasm-schema = "1.1"
grid-satellite-package = { git = "https://github.com/gridiron-fi/gridiron_ibc", version = "0.1" }

[dev-dependencies]
gridiron-token = { path = "../../token" }
gridiron-factory = { path = "../../factory" }
gridiron-pair = { path = "../../pair" }
cw-multi-test = "0.15"
gridiron-pair-stable = { path = "../../pair_stable" }
gridiron-governance = { git = "https://github.com/gridiron-fi/gridiron-governance" }
gridiron-escrow-fee-distributor = { git = "https://github.com/gridiron-fi/gridiron-governance" }
gridiron-native-coin-registry = { path = "../../periphery/native_coin_registry" }
